# cpp_otus

./: .travis.yml  CMakeLists.txt  build.sh  filter.cpp  filter.h  filter_test.cpp  hello.cpp  hello.h  hello_test.cpp  main.cpp
task3/: main.cpp
